# rust_gravity

./: .gitignore  Cargo.toml
src/: diff_eq.rs  gpu.rs  lib.rs  scene_layout.rs  sim.rs  utils.rs
src/diff_eq/: gpuable.rs  mod.rs  not_gpuable.rs
src/shaders/: compute.wgsl  render.wgsl
