[package]
name = "main_gravity"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou = "0.19.0"
nannou_egui = "0.19.0"

# Binary configurations (optional - Rust will auto-detect bin files)
[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[[bin]]
name = "planet_moon"
path = "src/bin/planet_moon.rs"

[[bin]]
name = "multi_body"
path = "src/bin/multi_body.rs"

[[bin]]
name = "rk4_demo"
path = "src/bin/rk4_demo.rs"