[package]
name = "main_gravity"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.25.0"
differential-equations = "0.6.1"
nalgebra = "0.35.0"
nannou = "0.19.0"
nannou_egui = "0.19.0"
plotters = "0.3.7"
quill = { version = "0.2.0", features = ["png"] }
voronator = "0.2.1"

[patch.crates-io]
differential-equations = { git = "https://github.com/CowsAreAmazing1/differential-equations.git" }
differential-equations-derive = { git = "https://github.com/CowsAreAmazing1/differential-equations.git" }
